// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" can handle outlandings 1`] = `
Object {
  "points": Array [
    Object {
      "point": Array [
        6.9322167,
        51.08195,
      ],
      "time": 1500303283000,
    },
    Object {
      "point": Array [
        6.2772167,
        50.9991667,
      ],
      "time": 1500306180000,
    },
    Object {
      "point": Array [
        6.1922167,
        51.1766667,
      ],
      "time": 1500308465000,
    },
  ],
}
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" emits multiple start events 1`] = `
Array [
  Object {
    "coordinate": Array [
      6.914216666666667,
      51.13826666666667,
    ],
    "secOfDay": 51431,
    "time": 1500301031000,
  },
  Object {
    "coordinate": Array [
      6.92305,
      51.10805,
    ],
    "secOfDay": 52011,
    "time": 1500301611000,
  },
  Object {
    "coordinate": Array [
      6.92745,
      51.096900000000005,
    ],
    "secOfDay": 53015,
    "time": 1500302615000,
  },
  Object {
    "coordinate": Array [
      6.930316666666667,
      51.08435,
    ],
    "secOfDay": 53459,
    "time": 1500303059000,
  },
]
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" emits multiple turn events 1`] = `
Array [
  Array [
    Object {
      "coordinate": Array [
        6.2829,
        50.996633333333335,
      ],
      "secOfDay": 55467,
      "time": 1500305067000,
    },
    1,
  ],
  Array [
    Object {
      "coordinate": Array [
        6.194816666666667,
        51.173249999999996,
      ],
      "secOfDay": 57115,
      "time": 1500306715000,
    },
    2,
  ],
  Array [
    Object {
      "coordinate": Array [
        6.6080499999999995,
        50.96866666666667,
      ],
      "secOfDay": 58807,
      "time": 1500308407000,
    },
    3,
  ],
]
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" emits single finish event 1`] = `
Array [
  Object {
    "coordinate": Array [
      7.008533333333333,
      51.09851666666667,
    ],
    "secOfDay": 59951,
    "time": 1500309551000,
  },
]
`;

exports[`RacingTaskSolver with task "2017-07-17-lev.tsk" returns a result 1`] = `
Object {
  "points": Array [
    Object {
      "point": Array [
        6.9322167,
        51.08195,
      ],
      "time": 1500303059000,
    },
    Object {
      "point": Array [
        6.2772167,
        50.9991667,
      ],
      "time": 1500305067000,
    },
    Object {
      "point": Array [
        6.1922167,
        51.1766667,
      ],
      "time": 1500306715000,
    },
    Object {
      "point": Array [
        6.6077833,
        50.965,
      ],
      "time": 1500308407000,
    },
    Object {
      "point": Array [
        7.03695,
        51.0977833,
      ],
      "time": 1500309551000,
    },
  ],
}
`;
